# rust-player-cli

./: Cargo.toml  LICENSE  readme.md
src/: config.rs  lib.rs  main.rs  player.rs  utils.rs
